<resources>
    <string name="app_name">Weather App</string>

    <string name="location">Location</string>
    <string name="temperature">Temperature</string>
    <string name="button_refresh">Refresh</string>
    <string name="icon">Icon</string>
    <string name="wind_speed">Monthly Repayment</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="humidity">Humidity</string>

</resources>
