<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 (C) CodePlay Studio. All rights reserved.
  ~
  ~ All source code within this app is licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License. You may obtain a copy of the
  ~ License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the
  ~ License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
  ~ either express or implied. See the License for the specific language governing permissions
  ~ and limitations under the License.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
     <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:textColor="#FFFFFF"
        android:text="@string/location"
        />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/location"
            android:drawableLeft="@drawable/ic_temperature"
            android:textColor="#FFFFFF"
            android:text="@string/temperature" />

    </RelativeLayout>

    <Button
        android:id="@+id/button_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textColor="#FFFFFF"
        android:text="Refresh"
        android:clickable="true"
        android:onClick="onClick"
        android:background="#3F51B5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="CREDIT Climacons by @adamwhitcroft"
        android:textColor="#FFFFFF"
        />


    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_thunderstorm_large" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@id/icon">

        <TableRow>

            <TextView
                android:id="@+id/wind_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:drawableLeft="@drawable/ic_wind"
                android:textColor="#FFFFFF"
                android:text="@string/wind_speed" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:drawableLeft="@drawable/ic_humidity"
                android:textColor="#FFFFFF"
                android:text="@string/humidity" />

            <TextView
                android:id="@+id/cloudiness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:drawableLeft="@drawable/ic_cloudiness"
                android:textColor="#FFFFFF"
                android:text="@string/cloudiness" />

        </TableRow>

    </TableLayout>

</RelativeLayout>
